Finalize feedback
